Get rid of the evil naughty sun package